<?xml version="1.0"?>
<package format="2">
  <name>limo_optitrack</name>
  <version>0.0.1</version>
  <description>ROS 2 package for Limo with OptiTrack integration</description>
  <maintainer email="dong.wang950305@gmail.com">Dong Wang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

